Added retailer css and js